media/error_tc/error_294_3.txt
G:\SEM-7\ADF\FINAL PROJECT\AlgoBooth\media\source_codes/sum.cpp: In function 'int main()':
G:\SEM-7\ADF\FINAL PROJECT\AlgoBooth\media\source_codes/sum.cpp:8:18: error: 'n' was not declared in this scope
     else cout << n + 100;
                  ^
